Add Bcrypt for password hashing and account authentication

--- a/socwork-business/src/main/resources/application.properties
+++ b/socwork-business/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 co.simplon.socwork.cors=http://localhost:5173/
+co.simplon.socwork.cost=12
