--- a/socwork-business/src/main/resources/application.properties
+++ b/socwork-business/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 co.simplon.socwork.cors=http://localhost:5173/
 co.simplon.socwork.cost=12
+co.simplon.socwork.secret=secret
