create token and authenticate

--- a/socwork-business/src/main/resources/application.properties
+++ b/socwork-business/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 co.simplon.socwork.cors=http://localhost:5173/
 co.simplon.socwork.cost=12
-co.simplon.socwork.secret=secret
+co.simplon.socwork.secret=secrettroioitoimetquamabaydatlamco
+co.simplon.socwork.isExp=true
+#ex Millis second (5000 = 5s)
+co.simplon.socwork.timeExp=-6000
