--- a/socwork-business/src/main/resources/application.properties
+++ b/socwork-business/src/main/resources/application.properties
@@ -12,4 +12,5 @@ co.simplon.socwork.cost=12
 co.simplon.socwork.secret=secrettroioitoimetquamabaydatlamco
 co.simplon.socwork.isExp=true
 #ex Millis second (5000 = 5s)
-co.simplon.socwork.timeExp=5000
+co.simplon.socwork.jwt.timeExp=5000
+co.simplon.socwork.jwt.issuer=http://localhost:8080/
