--- a/socwork-business/src/main/resources/application.properties
+++ b/socwork-business/src/main/resources/application.properties
@@ -6,11 +6,13 @@ spring.datasource.password=thaonguyen
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.security.oauth2.resourceserver.jwt.authorities-claim-name=roles
+spring.security.oauth2.resourceserver.jwt.authority-prefix=
 
 co.simplon.socwork.cors=http://localhost:5173/
 co.simplon.socwork.cost=12
 co.simplon.socwork.secret=secrettroioitoimetquamabaydatlamco
-co.simplon.socwork.isExp=true
-#ex Millis second (5000 = 5s)
-co.simplon.socwork.jwt.timeExp=5000
+
+#expriration by millis second (50000 = 5min)
+co.simplon.socwork.jwt.expriration=50000
 co.simplon.socwork.jwt.issuer=http://localhost:8080/
